[ZEPPELIN-6475] Replace trim().isEmpty() with isBlank()